# mini-agentic-pipeline

./: README.md  pyproject.toml  requirements.txt
examples/data/: sales.csv
examples/kb/: intro.md
mini-agentic-pipeline-ai/: .gitignore  README.md  main.py  requirements.txt
mini-agentic-pipeline-ai/data/: doc1_product_overview.txt  doc2_pricing.txt  doc3_features.txt  doc4_onboarding.md  doc5_support_faq.txt  doc6_rate_limits.txt  doc7_security.txt  doc8_data_retention.txt
mini-agentic-pipeline-ai/modules/: actor.py  controller.py  reasoner.py  retriever.py
mini-agentic-pipeline-ai/prompts/: reasoner_v1.txt  reasoner_v2.txt
mini-agentic-pipeline-ai/tools/: prices.csv
src/mini_agentic/: __init__.py  cli.py  kb.py  llm.py  pipeline.py
src/mini_agentic/tools/: __init__.py  csv_tool.py  http_tool.py
src/mini_agentic_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
