[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-agentic-pipeline"
version = "0.1.0"
description = "AI-driven mini agentic pipeline with KB retrieval, tools, and LLM"
authors = [
  { name = "Your Name" }
]
requires-python = ">=3.9"
dependencies = [
  "openai>=1.50.2",
  "tiktoken>=0.7.0",
  "httpx>=0.27.2",
  "pydantic>=2.9.2",
  "rich>=13.9.1",
  "typer>=0.12.5",
  "pandas>=2.2.2",
]
readme = "README.md"
keywords = ["agent", "LLM", "pipeline", "retrieval", "tools"]

[project.scripts]
mini-agent = "mini_agentic.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mini_agentic*"]
